[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ice"
version = "0.1.0"

readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    # List your dependencies here, or leave it empty to use requirements.txt separately
]

[project.urls]
Homepage = "https://github.com/hchen-lilly/ICE3"
Repository = "https://github.com/hchen-lilly/ICE3.git"

[tool.setuptools]
packages = ["ice"]
include-package-data = true
zip-safe = false

[project.scripts]
synthego_ice = "ice.analysis:single_sanger_analysis_cli"
synthego_ice_batch = "ice.analysis:multiple_sanger_analysis_cli"

# Adjust based on actual package structure
